--- a/data/config.ini
+++ b/data/config.ini
@@ -11,6 +11,7 @@ KEEP_JUPITER_DISABLED = True
 ; So assuming you dont know what an rpc is and what difference it makes in sending a txn, 
 ; I'll not implement new pools monitoring from the network in this project. DYOR and implement it on your own!)
 NEW_POOL = True
+BASE_URL = https://public.jupiterapi.com
 
 [INVESTMENT]
 ; I want to send buy attemps 10 seconds before pool actually opens...
